--- a/src/app/dash-board/booking/appointment/time/time.component.css
+++ b/src/app/dash-board/booking/appointment/time/time.component.css
@@ -1,32 +1,30 @@
-select {
-    /* width: 30px; */
-    height: 30px !important;
-    /* border-radius: 4px; */
-    width: 70px !important;
-    color: #555;
-    border: 1px solid #ccc;
+.date-list {
+    background-color: #1c4365 !important;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif !important;
+    color: #fff !important;
 }
 
-.form-control {
-    display: block;
-    width: 200%;
-    height: 34px;
-    padding: 6px 12px;
+::ng-deep .closed {
+    top: -1px;
+    font-size: 29px;
+    left: 3px;
+    background-color: transparent;
+    border: 0px solid;
+    color: #fff !important;
+    font-weight: 900;
+    float: right;
+}
+
+::ng-deep.modal-dialog {
+    width: 400px !important;
+    margin: 30px auto;
+}
+
+.popup {
+    font-family: Helvetica, sans-serif !important;
+    padding: 30px;
+    font-weight: 700;
+    text-align: justify;
     font-size: 14px;
-    line-height: 1.42857143;
-    color: #555;
-    background-color: #fff;
-    background-image: none;
-    border: 1px solid #ccc;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
-    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
-
-::ng-eep .btn {
-    /* position: absolute; */
-    background-color: transparent !important;
-    /* color: white; */
 }
