--- a/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
+++ b/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
@@ -16,7 +16,7 @@
                 <div class="col-xs-3 form-group">
                     <label path="contactnumber" for="contactnumber" cssClass="required">Contact
                         Number</label>
-                    <input formControlName="contactnumber" class="form-control" path="contactnumber"
+                    <input formControlName="contactnumber" class="form-control" type="number" path="contactnumber"
                         name="contactnumber" [ngClass]="{ 'is-invalid': submitted && f.contactnumber.errors }"
                         prefix="+91" mask="(000) 000 0000" />
                     <div *ngIf="submitted && f.contactnumber.errors" class="invalid-feedback">
