Change Password and Mail Integration Implemented..

--- a/src/app/dash-board/booking/appointment/bookingentry/bookingentry.component.html
+++ b/src/app/dash-board/booking/appointment/bookingentry/bookingentry.component.html
@@ -120,6 +120,7 @@
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Booking Entry</legend>
     <ag-grid-angular #agGrid class="ag-theme-balham" [gridOptions]="gridOptions" style="width: 100%; height: 350px;"
-        [pagination]="true" [frameworkComponents]="frameworkComponents">
+        [pagination]="true" [frameworkComponents]="frameworkComponents"
+        [getRowStyle]="getRowStyle">
     </ag-grid-angular>
 </fieldset>
